<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/contenedor" />

    <RelativeLayout 
        android:id="@+id/contenedor" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textoMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginTop="2dip"
            android:maxLines="4"
            android:text="@string/ubicando"
            android:gravity="center"
           	android:textAppearance="?android:attr/textAppearanceSmall" />
           
    </RelativeLayout>

    <ImageButton
        android:id="@+id/botonRuta"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/contenedor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/contenedor"
        android:layout_margin="5dp"
        android:alpha="1"
        android:background="@drawable/boton_ruta_mapa"
        android:contentDescription="@string/rutaACentro"
        android:padding="2dp"
        android:src="@android:drawable/ic_menu_directions"
        android:tint="#0fffffff" />

    <ImageButton
        android:id="@+id/botonUbicacion"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_above="@+id/botonRuta"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:background="@drawable/boton_ubicacion_mapa"
        android:contentDescription="@string/miUbicacion"
        android:src="@android:drawable/ic_menu_mylocation"
        android:tint="#000000" />

</RelativeLayout>
